config/istio/authorization-boards-allow-users.yaml
# Rule for Envoy sidecar servers to open up all authorization to the boards service
#
# You need to replace the namespace with your own here
# sed "s|microservices-demo|$PROJECT_NAME|" ./authorization-allow-all.yaml | oc apply -f -
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: boards-allow-users
spec:
  selector:
    matchLabels:
      app: boards
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.auth.claims[scope]
      values: ["openid"]
